--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
     "nanoid": "^4.0.0",
     "pino": "^8.6.1",
     "pino-pretty": "^9.1.1",
+    "prom-client": "^14.1.0",
     "zod": "^3.19.1"
   },
   "devDependencies": {
